Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24900

Changing a section property/criteria can cause ListView draw errors

XMLWordPrintable

      Run the attached .qml
      Press the Property button
      Press the Criteria button

      The list shows four section headers in a row. This is not correct.
      Scrolling the list outside of the view and back shows the items correctly.

        1. qtbug-24900.png
          17 kB
          Damian Jansen (closed Nokia identity)
        2. sections.qml
          6 kB
          Damian Jansen (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes