Position section headers correctly when section property changes.

Schedule a new layout after the section property is changed to correct
item positions if section headers are added or removed.

Task-number: QTBUG-24900

Change-Id: I7e46ec6dc00e5a810029396a4c5ca4e87ee1d94d
Reviewed-by: Martin Jones <martin.jones@nokia.com>